tests/syntax/good/testfile-ident-3.go
package main

func main() { true1 := 42 }
