tests/syntax/bad/testfile-var-4.go
package main

func main() { struct := 1 }
